Archive2/fa/2e4ef111f26c4f/output
main.cpp:29:21: error: use of overloaded operator '+' is ambiguous (with operand types 'MyClass<int>' and 'MyClass<long>')
    std::cout << (x + y).getImpl() << '\n';
                  ~ ^ ~
main.cpp:15:17: note: candidate function [with T0 = int, T1 = long]
    friend auto operator +(MyClass<T0> const& a, MyClass<T1> const& b);
                ^
main.cpp:19:6: note: candidate function [with T0 = int, T1 = long]
auto operator +(MyClass<T0> const& a, MyClass<T1> const& b)
     ^
1 error generated.
